# vscode-zh-completion

./: .gitignore  .vscodeignore  CHANGELOG.md  README.md  package.json  pnpm-lock.yaml  publish.sh  tsconfig.json  使用说明.md  使用说明SY.md  技术说明.md  贡献指南.md  贡献指南GX.md  难点说明.md
sample/C/: Makefile  README.md  main.c
sample/C#/: Program.cs  README.md  Simple.sln
sample/C#/中文包/: 中文包.cs  中文模块.cs  中文类.cs
sample/C++/: .clangd  CMakeLists.txt  README.md  main.cpp
sample/C++/中文包/: 中文模块.cpp  中文模块.h
sample/C/中文包/: 中文模块.c  中文模块.h
sample/Go/: README.md  go.mod  main.go  中文包.go
sample/JSON/: README.md  班级信息.json  班级信息.schema.json
sample/Java/: README.md
sample/Javascript/: README.md  README.me  样例.js
sample/Python/: README.md  README.me  样例.py
sample/Rust/: Cargo.toml  README.md
sample/SQL/: README.md  README.me  sample.db  sample.sql
sample/Typescript/: README.md  README.me  package.json  tsconfig.json  样例.ts
sample/XML/: ClassInfo.xsd  README.md  student.xsd  学生.xml  班级信息.xml
sample/YAML/: README.md  班级信息.schema.yaml  班级信息.yaml
sample/go/: go.mod  中文包.go
sample/typescript/: 样例.ts
script/: 五笔码表生成.py  拼音多音字词表生成.py  码表生成.py
script/old/: 多音字词表生成.py  拼音.ts  拼音多音字词表.ts
script/五笔/: 86码表.txt  98码表.txt  码表生成.py
script/小鹤双拼/: 字词混合码表.txt  码表生成.py
script/拼音/: 多音字原始词表.json  多音字词表生成.py  拼音多音字码表.ts  拼音码表.txt  码表生成.py
src/: extension.ts  接口封装.ts  环境配置.ts  补全实现.ts
src/码表/: index.ts  五笔.ts  五笔86版.ts  五笔98版.ts  小鹤双拼.ts  拼音.ts  拼音多音字码表.ts  拼音多音字词表.ts
src/语言/: html.ts  index.ts  java.ts  javascript.ts  python.ts  typescript.ts  基类.ts  通用实现.ts
(+33 files in other folders)
